// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixtures > ./fixtures/base.vue 1`] = `
{
  "script": undefined,
  "scriptSetup": undefined,
  "styles": [],
  "template": "
  {{ foo }}
",
}
`;

exports[`fixtures > ./fixtures/baseTs.vue 1`] = `
{
  "script": undefined,
  "scriptSetup": "
const foo = 'foo'
",
  "styles": [],
  "template": "
  <div>
    {{ foo }}
  </div>
",
}
`;
